mobile/jest_output.txt
FAIL src/core/__tests__/LigueCochons.test.ts
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    E:\HAPPYAGENCY\00 Clients\00 En cours\Manuel\code src\react-native\mobile\node_modules\firebase\firestore\dist\esm\index.esm.js:1
    ({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,jest){export * from '@firebase/firestore';
                                                                                      ^^^^^^

    SyntaxError: Unexpected token 'export'

    [0m [90m 11 |[39m [90m */[39m
     [90m 12 |[39m
    [31m[1m>[22m[39m[90m 13 |[39m [36mimport[39m { doc[33m,[39m getDoc[33m,[39m updateDoc[33m,[39m arrayUnion[33m,[39m increment } [36mfrom[39m [32m'firebase/firestore'[39m[33m;[39m
     [90m    |[39m [31m[1m^[22m[39m
     [90m 14 |[39m [36mimport[39m { db } [36mfrom[39m [32m'./firebase'[39m[33m;[39m
     [90m 15 |[39m [36mimport[39m { [33mLogService[39m } [36mfrom[39m [32m'./LogService'[39m[33m;[39m
     [90m 16 |[39m [36mimport[39m {[0m

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1505:14)
      at Object.require (src/core/services/league.service.ts:13:1)
      at Object.<anonymous> (src/core/__tests__/LigueCochons.test.ts:15:1)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        0.798 s
Ran all test suites matching /src\\core\\__tests__\\LigueCochons.test.ts/i.
